programs section done

--- a/src/stylesheets/Hero.css
+++ b/src/stylesheets/Hero.css
@@ -26,7 +26,7 @@
   background-color: transparent;
   color: white;
   padding: 0.5rem 3rem;
-  font-size: large;
+  font-size: medium;
   transition: 0.3s;
 }
 
