--- a/src/stylesheets/Hero.css
+++ b/src/stylesheets/Hero.css
@@ -19,7 +19,7 @@
   opacity: 0.7;
 }
 
-.heading a {
+.heading button {
   cursor: pointer;
   text-decoration: none;
   border: 2px solid white;
@@ -30,7 +30,7 @@
   transition: 0.3s;
 }
 
-.heading a:hover {
+.heading button:hover {
   transition: 0.3s;
   background-color: white;
   color: black;
