--- a/src/stylesheets/Nav.css
+++ b/src/stylesheets/Nav.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   padding: 1rem 10rem;
-  background-color: rgb(15, 15, 15);
+  background-color: rgb(15, 15, 15, 0.45);
 }
 
 .links-container {
