--- a/src/stylesheets/Programs.css
+++ b/src/stylesheets/Programs.css
@@ -1,52 +1,56 @@
-.programs {
-  margin-top: 5rem;
-  height: 100vh;
-}
-
-.programs h1 {
+.programs-container h1 {
   text-align: center;
+  padding: 5% 0;
 }
 
-.programs-container {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 5rem;
+.my-cards {
+  gap: 3rem;
+  margin-bottom: 5%;
 }
 
-.program-content {
-  max-width: 500px;
+.my-card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
-.program-content h2 {
+.my-card h5 {
   text-align: center;
 }
 
-.program-content img {
-  width: 500px;
-  height: 350px;
+.my-card img {
+  height: 250px;
 }
 
-.program-text {
-  text-align: justify;
-  padding: 2rem;
-}
-
-.program-text a {
+.my-card a {
   text-decoration: none;
-  color: black;
-}
-
-.program-text p {
-  margin-top: 0.5rem;
+  font-size: small;
   background-color: black;
   color: white;
-  padding: 0.5rem 0;
-  text-align: center;
+  padding: 0.3rem 0.5rem;
+  border: 2px solid black;
   transition: 0.3s;
 }
 
-.program-text p:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+.my-card a:hover {
+  background-color: white;
+  color: black;
+  border: 2px solid black;
   transition: 0.3s;
+}
+
+@media only screen and (max-width: 600px) {
+  .programs-container h1 {
+    font-size: medium;
+  }
+
+  .my-card {
+    font-size: small;
+  }
+
+  .my-card h5 {
+    font-size: medium;
+  }
+
+  .my-card img {
+    height: 200px;
+  }
 }
